--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/creative.css" rel="stylesheet">
+    <link href="css/creative.min.css" rel="stylesheet">
 
     <!-- Temporary navbar container fix -->
     <style>
@@ -54,9 +54,6 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
@@ -72,7 +69,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">CLEAN ARCHITECTURE & FUNCTIONAL DESIGN</h1>
                 <hr>
-                <p>We have got your business needs covered</p>
+                <p>We build software for web.</p>
                 <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
             </div>
         </div>
@@ -82,52 +79,30 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 text-center">
-                    <h2 class="section-heading text-white">We've got what you need!</h2>
-                    <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a class="btn btn-default btn-xl sr-button" href="#services">Get Started!</a>
+                    <h2 class="section-heading text-primary">The What & The How</h2>
+                    <p class="subheading">Our core principles and the kind of work we do.</p>
                 </div>
-            </div>
-        </div>
-    </section>
 
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                <div class="col-sm-6">
+                    <div class="feature">
+                        <div class="image-wrap">
+                            <img alt="We Build With Love" src="img/about/love.png">
+                        </div>
+                        <h4>WE BUILD WITH LOVE</h4>
+                        <h5>Every pixel and line of code</h5>
+                        <p>We treat each project as if we were making our own application for the web.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+
+
+                <div class="col-sm-6">
+                    <div class="feature">
+                        <div class="image-wrap">
+                            <img alt="We Build With Love" src="img/about/monitor.png">
+                        </div>
+                        <h4>FOR THE WEB</h4>
+                        <h5>And all the screens</h5>
+                        <p>A great cross-device user experience is one of our foremost priorities while building the web applications.</p>
                     </div>
                 </div>
             </div>
@@ -138,105 +113,66 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+                    <a class="portfolio-box" href="img/portfolio/fullsize/3.png">
+                        <img class="img-fluid" src="img/portfolio/thumbnails/3.png" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Web Development
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    IMLCA
                                 </div>
                             </div>
                         </div>
                     </a>
+                    <div class="project-link">
+                        <a class="btn btn-info" href="https://imclacoaches.com">Visit</a>
+                    </div>
                 </div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+                    <a class="portfolio-box" href="img/portfolio/fullsize/1.png">
+                        <img class="img-fluid" src="img/portfolio/thumbnails/1.png" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Web Development
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    NLV
                                 </div>
                             </div>
                         </div>
                     </a>
+
+                    <div class="project-link">
+                        <a class="btn btn-info" href="https://next-level-video.com">Visit</a>
+                    </div>
                 </div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+                    <a class="portfolio-box" href="img/portfolio/fullsize/2.png">
+                        <img class="img-fluid" src="img/portfolio/thumbnails/2.png" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Web Development
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Go4Ellis
                                 </div>
                             </div>
                         </div>
                     </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
+
+                    <div class="project-link">
+                        <a class="btn btn-info" href="https://go4ellis.com">Visit</a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <div class="call-to-action bg-dark">
-        <div class="container text-center">
-            <h2>Free Download at Start Bootstrap!</h2>
-            <a class="btn btn-default btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
-        </div>
-    </div>
 
     <section id="contact">
         <div class="container">
@@ -252,7 +188,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:hi@amblersaleem.com">hi@amblersaleem.com</a></p>
                 </div>
             </div>
         </div>
