--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         </div>
                     </a>
                     <div class="project-link">
-                        <a class="btn btn-info" href="https://imclacoaches.com">Visit</a>
+                        <a class="btn btn-info" href="https://imclacoaches.com">View</a>
                     </div>
                 </div>
 
@@ -147,7 +147,7 @@
                     </a>
 
                     <div class="project-link">
-                        <a class="btn btn-info" href="https://next-level-video.com">Visit</a>
+                        <a class="btn btn-info" href="https://next-level-video.com">View</a>
                     </div>
                 </div>
 
@@ -167,7 +167,7 @@
                     </a>
 
                     <div class="project-link">
-                        <a class="btn btn-info" href="https://go4ellis.com">Visit</a>
+                        <a class="btn btn-info" href="https://go4ellis.com">View</a>
                     </div>
                 </div>
             </div>
